BoaUAT/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_SEQ_No__c</fullName>
        <externalId>true</externalId>
        <label>Contact SEQ No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Name_from_Portal__c</fullName>
        <label>Customer Name from Portal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_CR_Contact_Seq_number__c</fullName>
        <label>DR/CR Contact Seq number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Type_from_Portal__c</fullName>
        <label>Industry Type from Portal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Contact_Left_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Contact Left Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Mins__c</fullName>
        <formula>(Now()-LastModifiedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIN</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>New_Company_Name__c</fullName>
        <label>New Company Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact created from Web Portal</inlineHelpText>
        <label>Portal Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Role_list</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Person_Code_in_Exo__c</fullName>
        <label>Sales Person Code in Exo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skype_Business_ID__c</fullName>
        <label>Skype Business ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_Personal_Id__c</fullName>
        <label>Skype Personal Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MEN-Motor Equipment News</fullName>
                </value>
                <value>
                    <fullName>EX Capricorn</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>is_Statement_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Statement/Remittance Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leadConvertedCon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>leadConvertedCon</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>First_name_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
        <errorMessage>Please enter first name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_Contact_has_left_company_or_not</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Is_Contact_Left_Company__c ,True,False)</errorConditionFormula>
        <errorMessage>Complete the New Company Name field.</errorMessage>
    </validationRules>
</CustomObject>